03-deployments.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: traefik2-proxy
  template:
    metadata:
      labels:
        run: traefik2-proxy
    spec:
      serviceAccountName: traefik2-ingress-controller
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      containers:
      - image: traefik:2.1
        imagePullPolicy: Always
        name: traefik2-ctr
        ports:
          - name: web
            containerPort: 80
          - name: admin
            containerPort: 8080
          - name: secure
            containerPort: 443
        readinessProbe:
          httpGet:
            path: /ping
            port: admin
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: admin
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        args:
          - --accesslog=true
          - --accesslog.filepath=/var/log/access.log
          - --accesslog.bufferingsize=100
#          - --accesslog.fields.defaultmode=keep
          - --accesslog.fields.names.ClientAddr=keep
          - --accesslog.fields.names.ClientHost=keep
          - --accesslog.fields.names.RequestAddr=keep
          - --accesslog.fields.names.RequestHost=keep
          - --accesslog.fields.headers.defaultmode=keep
          - --accesslog.fields.headers.names.User-Agent=keep
          - --accesslog.fields.headers.names.Authorization=drop
          - --accesslog.fields.headers.names.Content-Type=drop
          - --entryPoints.web.address=:80
          - --entryPoints.secure.address=:443
          - --entryPoints.traefik.address=:8080
          - --api.dashboard=true
          - --api.insecure=true
          - --ping=true
          - --providers.kubernetesCRD
          - --providers.kubernetesIngress
          - --log.level=WARN
          - --metrics.datadog=false
          - --certificatesresolvers.letsencrypt.acme.email=dan@ackerson.de
          - --certificatesresolvers.letsencrypt.acme.storage=/data/acme.json
          - --certificatesResolvers.letsencrypt.acme.dnsChallenge.provider=digitalocean
          - --certificatesResolvers.letsencrypt.acme.dnsChallenge.delayBeforeCheck=5
          # Please note that this is the staging Let's Encrypt server.
          # Once you get things working, you should remove that whole line altogether.
          # - --certificatesresolvers.letsencrypt.acme.CAserver=https://acme-staging-v02.api.letsencrypt.org/directory
        volumeMounts:
          - name: storage-volume
            mountPath: /data
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: traefik-acme-storage
