07-transmission.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: default
spec:
  ports:
    - name: transmission
      protocol: TCP
      port: 9091
      targetPort: 9091

---
apiVersion: v1
kind: Endpoints
metadata:
  name: transmission
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.178.59
    ports:
      - port: 9091
        name: transmission

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - secure
  routes:
  - match: Host(`transmission.ackerson.de`)
    middlewares:
    - name: tls-redirect
    - name: api-auth
    kind: Rule
    services:
    - name: transmission
      port: 9091
