08-urbit.yml
apiVersion: v1
kind: Service
metadata:
  name: urbit
  namespace: default
spec:
  ports:
    - name: urbit
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: urbit
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.178.59
    ports:
      - port: 8080
        name: urbit

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: urbit-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - secure
  routes:
  - match: Host(`rinsed-miplug.ackerson.de`)
    middlewares:
    - name: tls-redirect
    - name: api-auth
    kind: Rule
    services:
    - name: urbit
      port: 8080
