whoami.yml
kind: Service
apiVersion: v1
metadata:
  name: whoami
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: whoami

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`k3sgcp.ackerson.de`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - secure
  routes:
  - match: Host(`k3sgcp.ackerson.de`) && PathPrefix(`/tls`)
    middlewares:
        - name: tls-redirect
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: letsencrypt
